Closed Bug 862236 Opened 13 years ago Closed 13 years ago

crash in mozilla::layers::CompositableHost::AddMaskEffect

Categories

(Core :: Graphics: Layers, defect)

23 Branch
ARM
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla23
Tracking Status
firefox22 --- unaffected
firefox23 + fixed

People

(Reporter: scoobidiver, Assigned: nrc)

References

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

It has been hit by three users since 23.0a1/20130410065939. It's likely a regression from bug 825928. Signature mozilla::layers::CompositableHost::AddMaskEffect(mozilla::layers::EffectChain&, mozilla::gfx::Matrix4x4 const&, bool) More Reports Search UUID 3943111b-c29f-46d7-98b6-f8f3e2130415 Date Processed 2013-04-15 18:04:52 Uptime 1048 Last Crash 4.8 weeks before submission Install Age 13.7 hours since version was first installed. Install Time 2013-04-15 04:19:55 Product FennecAndroid Version 23.0a1 Build ID 20130414031025 Release Channel nightly OS Android OS Version 0.0.0 Linux 2.6.39.4-00031-g9e6e405 #1 SMP PREEMPT Mon May 7 10:45:36 CDT 2012 armv7l MOTO/RTDACH/wifi_hubble:4.0.4/I.7.1-42/1336408583:user/ota-rel-keys,release-keys Build Architecture arm Build Architecture Info Crash Reason SIGSEGV Crash Address 0x0 App Notes AdapterDescription: 'NVIDIA Corporation -- NVIDIA Tegra -- OpenGL ES 2.0 -- Model: MZ604, Product: RTDACH, Manufacturer: Motorola, Hardware: stingray' GL Layers! EGL? EGL+ GL Context? GL Context+ GL Layers+ Stagefright? Stagefright- Motorola MZ604 MOTO/RTDACH/wifi_hubble:4.0.4/I.7.1-42/1336408583:user/ota-rel-keys,release-keys Processor Notes sp-processor08.phx1.mozilla.com_31563:2012; exploitability tool failed: 127 EMCheckCompatibility True Adapter Vendor ID NVIDIA Corporation Adapter Device ID NVIDIA Tegra Device Motorola MZ604 Android API Version 15 (REL) Android CPU ABI armeabi-v7a Frame Module Signature Source 0 libxul.so mozilla::layers::CompositableHost::AddMaskEffect gfx/layers/composite/CompositableHost.cpp:36 1 libxul.so mozilla::layers::LayerManagerComposite::AddMaskEffect gfx/layers/composite/LayerManagerComposite.cpp:613 2 dalvik-heap (deleted) dalvik-heap @0x28210a5 3 libxul.so mozilla::layers::ThebesLayerComposite::RenderLayer gfx/layers/composite/ThebesLayerComposite.cpp:124 4 libmedia.so libmedia.so@0x27ffe 5 libdvm.so libdvm.so@0x6effe 6 libmedia.so libmedia.so@0x27ffe 7 libxul.so void mozilla::layers::ContainerRender<mozilla::layers::ContainerLayerComposite> obj-firefox/dist/include/mozilla/RefPtr.h:166 8 dalvik-heap (deleted) dalvik-heap @0x3fc2ffe 9 dalvik-heap (deleted) dalvik-heap @0x3982ffe More reports at: https://crash-stats.mozilla.com/report/list?signature=mozilla%3A%3Alayers%3A%3ACompositableHost%3A%3AAddMaskEffect%28mozilla%3A%3Alayers%3A%3AEffectChain%26%2C+mozilla%3A%3Agfx%3A%3AMatrix4x4+const%26%2C+bool%29
It's #7 top crasher in 23.0a1 and #2 without fixed ones.
tracking-fennec: --- → ?
Keywords: topcrash
Assignee: nobody → ncameron
I couldn't repro this, but this should stop the crashes. It is a band aid, we shouldn't ever be in this situation, but everything works fine for me, so I can't tell where we are going wrong. It would be great to have a URL and/or STR. I'll keep trying to find a real solution too, but I guess we will want this patch - missing some corners is better than a crash.
Attachment #738309 - Flags: review?(matt.woodrow)
Attachment #738309 - Flags: review?(matt.woodrow) → review+
Whiteboard: [leave open]
This is what the URL report found: 1 http://www.sahibinden.com/alt-kategori/otomobil 1 about:home
Keywords: needURLs
Will track and watch if the crash volume decreases.
Currently at #13 on 23.0a1. Will watch.
(In reply to lsblakk@mozilla.com from comment #6) > Will track and watch if the crash volume decreases. There have been no crashes since 23.0a1/20130418: https://crash-stats.mozilla.com/report/list?range_value=4&range_unit=weeks&signature=mozilla%3A%3Alayers%3A%3ACompositableHost%3A%3AAddMaskEffect%28mozilla%3A%3Alayers%3A%3AEffectChain%26%2C%20mozilla%3A%3Agfx%3A%3AMatrix4x4%20const%26%2C%20bool%29 Nick, file a new bug for the underlying issue if applicable.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [leave open]
Target Milestone: --- → mozilla23
Blocks: 866567
tracking-fennec: ? → ---

Removing steps-wanted keyword because this bug has been resolved.

Keywords: steps-wanted
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: