Bug 862236, check we have a compositable before using it as a mask layer. r=mattwoodrow